# cinnamon-bluetooth

./: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  cinnamon-bluetooth-1.0.pc.in  config.h.in  configure  configure.ac
.pc/02_gettext_macros.patch/: configure.ac
.pc/03_text_changes.patch/applet/: popup-menu.ui
.pc/start_in_classic_session.patch/applet/: bluetooth-applet.desktop.in.in
applet/: Makefile-lib.am  Makefile.am  Makefile.in  authorisation-dialogue.ui  bluetooth-applet.c  bluetooth-applet.desktop.in.in  cinnamon-bluetooth-applet.desktop.in.in  confirm-dialogue.ui  main.c  notify.c  notify.h  passkey-dialogue.ui  popup-menu.ui  test-agentdialog.c
debian/: 61-cinnamon-bluetooth-rfkill.rules  bluetooth-applet-unity.desktop  changelog  cinnamon-bluetooth.install  control  control.in  libcinnamon-bluetooth-dev.install  libcinnamon-bluetooth1.symbols  rules
debian/patches/: 01_use_app_indicator.patch  03_text_changes.patch  nodisplay_autostart.patch  series  start_in_classic_session.patch  unity_sound_nua.patch
docs/: Makefile.in
docs/reference/: Makefile.am  Makefile.in
docs/reference/libgnome-bluetooth/: Makefile.am  Makefile.in  gnome-bluetooth-docs.sgml
docs/reference/libgnome-bluetooth/html/: BluetoothChooser.html  BluetoothChooserButton.html  BluetoothChooserCombo.html  BluetoothClient.html  annotation-glossary.html  api-index-full.html  ch01.html  gnome-bluetooth-bluetooth-enums.html  gnome-bluetooth-bluetooth-plugin.html  gnome-bluetooth-bluetooth-utils.html  gnome-bluetooth.devhelp2  index.html  index.sgml  object-tree.html
docs/reference/libgnome-bluetooth/tmpl/: bluetooth-chooser-button.sgml  bluetooth-chooser-combo.sgml  bluetooth-chooser.sgml  bluetooth-client.sgml  bluetooth-enums.sgml  bluetooth-utils.sgml  gnome-bluetooth-enum-types.sgml  gnome-bluetooth-unused.sgml
help/: Makefile.in
help/ca/: index.docbook  legal.xml
help/cs/: index.docbook  legal.xml
help/da/: index.docbook  legal.xml
help/de/: index.docbook  legal.xml
help/el/: index.docbook  legal.xml
help/es/: index.docbook  legal.xml
help/fi/: index.docbook  legal.xml
help/fr/: index.docbook  legal.xml
help/gl/: index.docbook
help/id/: index.docbook  legal.xml
help/ko/: index.docbook  legal.xml
help/pa/: index.docbook
help/ro/: index.docbook  legal.xml
help/ru/: index.docbook  legal.xml
help/sl/: index.docbook
help/sv/: index.docbook  legal.xml
help/te/: index.docbook
help/th/: index.docbook  legal.xml
help/zh_CN/: index.docbook  legal.xml
help/zh_HK/: index.docbook
help/zh_TW/: index.docbook
icons/: Makefile.am  Makefile.in
lib/: Makefile.am  Makefile.in  bluetooth-chooser.c  bluetooth-client-glue.c  bluetooth-client-glue.h  bluetooth-client.c  bluetooth-filter-widget.c  bluetooth-plugin.h  bluetooth-utils.c  cinnamon-bluetooth-enum-types.c  cinnamon-bluetooth-enum-types.h  test-client.c
lib/plugins/: Makefile.am  Makefile.in
po/: POTFILES.in  af.po
sendto/: Makefile.in
wizard/: Makefile.am  Makefile.in  cinnamon-bluetooth-wizard.desktop.in.in  main.c
